fix gitifnore maybe

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ Assignment 1.xcodeproj/project.pbxproj
 *.user
 *.userosscache
 *.sln.docstates
+*.sln
+*.vcxproj
+*.vcxproj.filters
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
